integrated rezorpay payment

--- a/service/.env
+++ b/service/.env
@@ -4,6 +4,9 @@ WEB_BASE_URL = http://localhost:3000
 JWT_SECRET = chinu
 
 
+RAZOR_PAY_KEY_ID = "rzp_test_iKeNR1ZgslSuZ3"
+RAZOR_PAY_KEY_SECRET = "0GMLIOZA86Gb37rDtOqH3kzv"
+
 
 # prod variables
 
