--- a/service/package.json
+++ b/service/package.json
@@ -16,6 +16,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "razorpay": "^2.9.4",
+    "request": "^2.88.2"
   }
 }
